# based

./: .gitignore  Cargo.toml  LICENSE  README.md
antsy/: Cargo.toml
antsy/src/: lib.rs
based/: Cargo.toml
based/examples/: defocus.rs  oneweekend.rs  stacked.rs
based/src/: camera.rs  hittable.rs  lib.rs  material.rs  renderer.rs
glitz/: Cargo.toml
glitz/benches/: math.rs  rand.rs
glitz/src/: lib.rs  vec.rs  vecgen.rs
syzygy/: Cargo.toml
syzygy/examples/: defocus.rs
syzygy/src/: camera.rs  hittable.rs  lib.rs  main.rs  material.rs  random.rs  ray.rs  renderer.rs
xenon/: Cargo.toml
xenon/src/: color.rs  lib.rs  write.rs
