[package]
name = "based"
version = "0.1.0"
authors = ["ashpil <ashpil@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glitz = { path = "../glitz" }
xenon = { path = "../xenon" }
antsy = { path = "../antsy" }
png = "0.16.7"
rand_xoshiro = "0.6.0"
rand = "0.8"

