[package]
name = "based"
version = "0.1.0"
authors = ["ashpil <ashpil@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glitz = { path = "../glitz" }
xenon = { path = "../xenon" }
antsy = { path = "../antsy" }
png = { version = "0.16.7", default-features = false }
rand_xoshiro = "0.6.0"
rand = { version = "0.8.0", default-features = false }

