[package]
name = "xenon"
version = "0.1.0"
authors = ["ashpil <shpilenok2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon"]

[dependencies]
png = "0.16.7"
rayon = { version = "1.5.0", optional = true }

